force-app/main/default/objects/Community_Settings__c/Community_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Standard Settings related to community/marketplace</description>
    <label>Community Settings</label>
</CustomObject>