force-app/main/default/objects/Community_Settings__c/fields/Brand_Report_Folder__c.field-meta.xml
<CustomField>
    <fullName>Brand_Report_Folder__c</fullName>
    <label>Brand Report Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>