force-app/main/default/objects/Community_Settings__c/fields/Minimum_Sample_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Sample_Sales_Price__c</fullName>
    <label>Minimum Sample Sales Price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>