force-app/main/default/objects/Community_Settings__c/fields/Order_Cutoff_time__c.field-meta.xml
<CustomField>
    <fullName>Order_Cutoff_time__c</fullName>
    <label>Order Cutoff time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>