force-app/main/default/objects/Community_Settings__c/fields/Retailer_Report_Folder__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Report_Folder__c</fullName>
    <label>Retailer Report Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>