force-app/main/default/objects/Community_Settings__c/fields/Schedule_Payment_URL__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Payment_URL__c</fullName>
    <label>Schedule Payment URL</label>
    <type>Url</type>
</CustomField>