force-app/main/default/objects/Community_Settings__c/fields/ST_Cutoff_time__c.field-meta.xml
<CustomField>
    <fullName>ST_Cutoff_time__c</fullName>
    <label>ST Cutoff time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>